--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">tmpApp1</string>
     <string name="title">Вычислить \"C\"</string>
     <string name="result_info">Результат:&#160;</string>
+    <string name="result">РЕЗУЛЬТАТ</string>
     <string name="input_a">Введите значение \"a\"</string>
     <string name="input_b">Введите значение \"b\"</string>
 </resources>
